--- a/application/client/templates/menu.html
+++ b/application/client/templates/menu.html
@@ -8,6 +8,14 @@
         <li><a href="#"><i class="fa fa-laptop menu-icon"></i> Customer Equipment</a></li>
       </ul>
     </li>
+     <li class="dropdown">
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-users menu-icon"></i> Accounts <span class="caret"></span></a>
+      <ul class="dropdown-menu" role="menu">
+        <li><a href="{{pathFor 'create'}}"><i class="fa fa-user-plus menu-icon"></i> Create Account</a></li>
+        <li><a href="#"><i class="fa fa-pencil menu-icon"></i> Edit Account</a></li>
+        <li><a href="#"><i class="fa fa-search menu-icon"></i> Search</a></li>
+      </ul>
+    </li>
   {{#if isInRole 'admin'}}
     {{> wtMenu}}
   {{/if}}
