added billforward settings and create account template

--- a/packages/bf-accounts/client/templates/create.html
+++ b/packages/bf-accounts/client/templates/create.html
@@ -1,5 +1,58 @@
 <template name="wtCreateAccount">
   <div class="wt-create-title">
     <h4>Create Account</h4>
+    	<div class="container">
+		     <form class="form-horizontal">
+		    <div class="form-group">
+		      <label class="control-label col-sm-4" for="firstName">First Name:</label>
+		      <div class="col-sm-4">
+		        <input type="text" class="form-control" id="firstName" placeholder="Enter First Name">
+		      </div>
+		    </div>
+		    <div class="form-group">
+		      <label class="control-label col-sm-4" for="lastName">Last Name:</label>
+		      <div class="col-sm-4">          
+		        <input type="text" class="form-control" id="lastName" placeholder="Enter Last Name">
+		      </div>
+		    </div>
+
+		    <div class="form-group">
+		      <label class="control-label col-sm-4" for="email">Email:</label>
+		      <div class="col-sm-4">
+		        <input type="email" class="form-control" id="email" placeholder="Enter email">
+		      </div>
+		    </div>
+		    <div class="form-group">
+		      <label class="control-label col-sm-4" for="phone">Phone:</label>
+		      <div class="col-sm-4">          
+		        <input type="text" class="form-control" id="phone" placeholder="Enter Phone Number">
+		      </div>
+		    </div>
+		    <div class="form-group">
+		      <label class="control-label col-sm-4" for="otherInfo">Other Information:</label>
+		      <div class="col-sm-4">
+		        <input type="text" class="form-control" id="otherInfo" placeholder="Enter email">
+		      </div>
+		    </div>
+		    <div class="form-group">
+		      <label class="control-label col-sm-4" for="pwd">Company Name:</label>
+		      <div class="col-sm-4">          
+		        <input type="password" class="form-control" id="pwd" placeholder="Enter password">
+		      </div>
+		    </div>
+		    <div class="form-group">
+		      <label class="control-label col-sm-4" for="pwd">Tax Number:</label>
+		      <div class="col-sm-4">          
+		        <input type="password" class="form-control" id="pwd" placeholder="Enter password">
+		      </div>
+		    </div>
+		   
+		    <div class="form-group">        
+		      <div class="col-sm-offset-4 col-sm-4">
+		        <button type="submit" class="btn btn-default">Submit</button>
+		      </div>
+		    </div>
+		  </form>
+	</div>
   </div>
 </template>
