rest api create account added

--- a/packages/wisptools:billforward-ui/client/templates/create-account.html
+++ b/packages/wisptools:billforward-ui/client/templates/create-account.html
@@ -1,4 +1,4 @@
-<template name="wtCreateAccount">
+<template name="wtCreateBfAccount">
   <div class="wt-create-title">
     <h4>Create Account</h4>
     	<div class="container">
