--- a/packages/wisptools:billforward-ui/client/templates/list-accounts.html
+++ b/packages/wisptools:billforward-ui/client/templates/list-accounts.html
@@ -1,5 +1,29 @@
 <template name="wtListBfAccounts">
   <h2>Billforward Accounts</h2>
-{{accountDetails}}
+  <div class="container">
+	  <p>Click edit button to view and update account details.</p>            
+	  <table class="table table-hover table-responsive">
+	    <thead>
+	      <tr>
+	        <th>Firstname</th>
+	        <th>Lastname</th>
+	        <th>Email</th>
+	        <th></th>
+	      </tr>
+	    </thead>
+	    <tbody>
+	 			{{#each accountDetails}}
+ 					<tr>
+  					{{#with profile}}
+    					<td>{{firstName}}</td>
+			        <td>{{lastName}}</td>
+			        <td>{{email}}</td>
+			        <td><button type="button" value="{{accountID}}" class="edit_button btn btn-info">Edit</button></td>
+  					{{/with}}
+  				</tr>
+				{{/each}}
+	    </tbody>
+	  </table>
+	</div>
 </template>
 
