completed billforward edit account and added sacha spinner

--- a/packages/wisptools:billforward-ui/client/templates/edit-account.html
+++ b/packages/wisptools:billforward-ui/client/templates/edit-account.html
@@ -53,7 +53,8 @@
 			</form>
 		</div>
 		{{else}}
-		Loading...
+		<h4>Loading...</h4>
+		<div style="height: 175px;">{{> spinner}}</div>
 		<!--<img src="/templates/img/loading.gif"> -->
   	{{/if}}
 	</div>
