--- a/packages/wisptools:billforward-ui/client/templates/list-accounts.html
+++ b/packages/wisptools:billforward-ui/client/templates/list-accounts.html
@@ -1,7 +1,8 @@
 <template name="wtListBfAccounts">
   <h2>Billforward Accounts</h2>
+  {{#if displayTable}}
   <div class="container">
-	  <p>Click edit button to view and update account details.</p>            
+	  <h4>Click edit button to view and update account details.</h4>            
 	  <table class="table table-hover table-responsive">
 	    <thead>
 	      <tr>
@@ -25,5 +26,9 @@
 	    </tbody>
 	  </table>
 	</div>
+	{{else}}
+		<h4>Fetching data from Billforward...</h4>
+		<div style="height: 175px;">{{> spinner}}</div>
+  {{/if}}
 </template>
 
