--- a/packages/wisptools:billforward-ui/client/templates/components/address.html
+++ b/packages/wisptools:billforward-ui/client/templates/components/address.html
@@ -33,4 +33,22 @@
       </div>
     </div>
   {{/if}}
+  <div class="form-group">
+    <label for="address" class="control-label col-sm-4">City</label>
+    <div class="col-sm-4">
+      <input type="text" class="form-control" id="city" name="city" placeholder="City" value="{{city}}">
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="address" class="control-label col-sm-4">State</label>
+    <div class="col-sm-4">
+      <input type="text" class="form-control" id="province" name="province" placeholder="State" value="{{province}}">
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="address" class="control-label col-sm-4">Zip</label>
+    <div class="col-sm-4">
+      <input type="text" class="form-control" id="postcode" name="postcode" placeholder="Zip" value="{{postcode}}">
+    </div>
+  </div>
 </template>
